--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">
 
-    <!-- NAVBAR -->
+    <!-- NAVBARrr -->
     <nav class="navbar navbar-expand-lg bg-white sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#">
