--- a/reviews.html
+++ b/reviews.html
@@ -29,16 +29,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto" style="padding-right: 20%;">
                     <li class="nav-item">
-                        <a class="nav-link" href="#hero">Home</a>
+                        <a class="nav-link" href="index.html#hero">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
+                        <a class="nav-link" href="index.html#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#services">Services</a>
+                        <a class="nav-link" href="index.html#services">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#portfolio">Become a Partner</a>
+                        <a class="nav-link" href="index.html#partner">Become a Partner</a>
                     </li>
                 </ul>
                 <a href="#" class="btn btn-brand ms-lg-3">Learners area</a>
@@ -52,114 +52,6 @@
         </div>
     </nav>
 
-<!-- HERO -->
-<section id="hero" class="min-vh-100 d-flex align-items-center text-left">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <h1 class="text-white fw-semibold display-0">Ready To Take Your Learning Journey Up A Notch?</h1>
-                <h5 class="text-white fw-light mt-3 mb-4">Enhance your language skills with expert speakers and accelerate your learning journey.</h5>
-                <div>
-                    <a href="#" class="main-btn btn btn-brand me-2">Start Your Journey</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- ABOUT-->
-<section id="about" class="section-padding s-background-color">
-    <div class="container">
-        <div class="row">
-            <div class="col-12 text-center s-background-color">
-                <div class="section-about-title section-title s-background-color">
-                    <h1 class="display-4 fw-semibold s-background-color">About us</h1>
-                    <div class="line"></div>
-                    <p class="s-background-color">Our passionate team spans across continents, united in our love for languages. Our mission? To connect the world through language, culture, and community. Join our thriving community of over 30 million members and embark on an incredible language learning journey. You're in great company here at FluentFlyer!</p>
-               </div>
-            </div>
-        </div>
-        <div class="row justify-content-between align-items-center s-background-color">
-            <div class="col-3">
-            </div>
-            <div class="col-lg-9 s-background-color">
-                <div class="d-flex pt-4 mb-3 s-background-color">
-                    <div class="iconbox me-4 light-background-color">
-                        <i class="bi bi-collection-play png"></i>
-                    </div>
-                    <div class="s-background-color">
-                        <h5 class="s-background-color">Personal tutoring</h5>
-                        <p class="s-background-color">One-to-one sessions focused on a personal plan.</p>
-                    </div>
-                </div>
-                <div class="d-flex mb-3 s-background-color">
-                    <div class="iconbox me-4 light-background-color">
-                        <i class="bi bi-envelope-check png"></i>
-                    </div>
-                    <div class="s-background-color">
-                        <h5 class="s-background-color">Customer Support</h5>
-                        <p class="s-background-color">Need assistance with FluentFlyer? Don't hesitate to drop us an email using the form below. 😊</p>
-                    </div>
-                </div>
-                <div class="d-flex s-background-color">
-                    <div class="iconbox me-4 light-background-color">
-                        <i class="bi bi-globe png"></i>
-                    </div>
-                    <div class="s-background-color">
-                        <h5 class="s-background-color">General Inquiries</h5>
-                        <p class="s-background-color">Get in touch for press opportunities, partnerships, and other general inquiries. </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-    <!-- SERVICES -->
-    <section id="services" class="section-padding">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 text-center">
-                    <div class="section-title">
-                        <h1 class="display-4 fw-semibold">Our Services</h1>
-                        <div class="line"></div>
-                        <p>We create meaningful experiences that defy expectations with our profisional speackers skills.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row g-4 text-center">
-
-                <div class="col-lg-4 col-sm-6">
-                    <div class="service theme-shadow p-lg-5 p-4">
-                        <div class="iconbox">
-                            <i class="bi bi-calendar-heart png"></i>
-                        </div>
-                        <h5 class="mt-4 mb-3">Preferred Schedule</h5>
-                        <p>we offer personalized appointments based on your availability, with our Preferred Schedule Service.</p>
-                    </div>
-                </div>                
-                <div class="col-lg-4 col-sm-6">
-                    <div class="service theme-shadow p-lg-5 p-4">
-                        <div class="iconbox">
-                            <i class="bi bi-person-circle png"></i>
-                        </div>
-                        <h5 class="mt-4 mb-3">Partner's profile</h5>
-                        <p>Gain valuable insights into speaker profiles to choose the best partners for your specific needs.</p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="service theme-shadow p-lg-5 p-5">
-                        <div class="iconbox">
-                            <i class="bi bi-send-check png"></i>
-                        </div>
-                        <h5 class="mt-4 mb-3">Contact The Partners</h5>
-                        <p>Connect with our Partner Contact Service for seamless communication and collaboration with our valued partners.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
 
     <!-- REVIEW -->
     <section id="reviews" class="section-padding s-background-color">
@@ -169,7 +61,7 @@
                     <div class="section-title s-background-color">
                         <h1 class="display-4 fw-semibold s-background-color">Reviews</h1>
                         <div class="line"></div>
-                        <p class="s-background-color">It's never been this fun to learn languages. Millions of happy FluentFlyer members agree!</p>
+                        <!-- <p class="s-background-color">It's never been this fun to learn languages. Millions of happy FluentFlyer members agree!</p> -->
                     </div>
                 </div>
             </div>
@@ -182,7 +74,7 @@
                                 <i class="ri-star-fill bg-white"></i>
                                 <i class="ri-star-fill bg-white"></i>
                                 <i class="ri-star-fill bg-white"></i>
-                                <i class="ri-star-fill bg-white"></i>
+                                <i class="ri-star-fill bg-white star"></i>
                             </div>
                             <p class="comment-block">I never imagined how much I'd be hooked on FluentFlyer. I post in Spanish and get edits/comments instantly from native speakers!</p>
                         </div>
@@ -190,7 +82,6 @@
                             <img class="rounded-circle" src="./assets/images/avatar-1.jpg" alt="avatar">
                             <div class="ms-3 s-background-color">
                                 <h5 class="s-background-color">Dianne Russell</h5>
-                                <small class="s-background-color">Learner</small>
                             </div>
                         </div>
                     </div>
@@ -202,6 +93,26 @@
                                 <i class="ri-star-fill bg-white"></i>
                                 <i class="ri-star-fill bg-white"></i>
                                 <i class="ri-star-fill bg-white"></i>
+                                <i class="ri-star-fill bg-white star"></i>
+                                <i class="ri-star-fill bg-white star"></i>
+                            </div>
+                            <p class="comment-block">I'm surprised at how friendly people are and how they genuinely are interested in learning and meeting new friends.</p>
+                        </div>
+                        <div class="review-person mt-4 d-flex align-items-center s-background-color">
+                            <img class="rounded-circle" src="./assets/images/avatar-2.jpg" alt="avatar">
+                            <div class="ms-3 s-background-color">
+                                <h5 class="s-background-color">John Smith</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 s-background-color">
+                    <div class="review s-background-color">
+                        <div class="review-head p-4 bg-white theme-shadow">
+                            <div class="text-warning bg-white">
+                                <i class="ri-star-fill bg-white"></i>
+                                <i class="ri-star-fill bg-white"></i>
+                                <i class="ri-star-fill bg-white"></i>
                                 <i class="ri-star-fill bg-white"></i>
                                 <i class="ri-star-fill bg-white"></i>
                             </div>
@@ -210,8 +121,7 @@
                         <div class="review-person mt-4 d-flex align-items-center s-background-color">
                             <img class="rounded-circle" src="./assets/images/avatar-3.jpg" alt="avatar">
                             <div class="ms-3 s-background-color">
-                                <h5 class="s-background-color">Mic Smoth</h5>
-                                <small class="s-background-color">Native speaker</small>
+                                <h5 class="s-background-color">Mic smoth</h5>
                             </div>
                         </div>
                     </div>
@@ -222,30 +132,9 @@
                             <div class="text-warning bg-white">
                                 <i class="ri-star-fill bg-white"></i>
                                 <i class="ri-star-fill bg-white"></i>
-                                <i class="ri-star-fill bg-white"></i>
-                                <i class="ri-star-fill bg-white"></i>
-                                <i class="ri-star-fill bg-white"></i>
-                            </div>
-                            <p class="comment-block">I'm surprised at how friendly people are and how they genuinely are interested in learning and meeting new friends.</p>
-                        </div>
-                        <div class="review-person mt-4 d-flex align-items-center s-background-color">
-                            <img class="rounded-circle" src="./assets/images/avatar-2.jpg" alt="avatar">
-                            <div class="ms-3 s-background-color">
-                                <h5 class="s-background-color">John Smith</h5>
-                                <small class="s-background-color">Native speaker</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6 s-background-color">
-                    <div class="review s-background-color">
-                        <div class="review-head p-4 bg-white theme-shadow">
-                            <div class="text-warning bg-white">
-                                <i class="ri-star-fill bg-white"></i>
-                                <i class="ri-star-fill bg-white"></i>
-                                <i class="ri-star-fill bg-white"></i>
-                                <i class="ri-star-fill bg-white"></i>
-                                <i class="ri-star-fill bg-white"></i>
+                                <i class="ri-star-fill bg-white star"></i>
+                                <i class="ri-star-fill bg-white star"></i>
+                                <i class="ri-star-fill bg-white star"></i>
                             </div>
                             <p class="comment-block">French native learning German on FluentFlyer: Feedback on French, suggestions for German. Community contribution.</p>
                         </div>
@@ -253,7 +142,6 @@
                             <img class="rounded-circle" src="./assets/images/avatar-6.jpg" alt="avatar">
                             <div class="ms-3 s-background-color">
                                 <h5 class="s-background-color">Ava Anderson</h5>
-                                <small class="s-background-color">Native speaker</small>
                             </div>
                         </div>
                     </div>
@@ -274,7 +162,6 @@
                             <img class="rounded-circle" src="./assets/images/avatar-5.jpg" alt="avatar">
                             <div class="ms-3 s-background-color">
                                 <h5 class="s-background-color">John Smith</h5>
-                                <small class="s-background-color">Native speaker</small>
                             </div>
                         </div>
                     </div>
@@ -295,7 +182,6 @@
                             <img class="rounded-circle" src="./assets/images/avatar-4.jpg" alt="avatar">
                             <div class="ms-3 s-background-color">
                                 <h5 class="s-background-color">Emily Davis</h5>
-                                <small class="s-background-color">Learner</small>
                             </div>
                         </div>
                     </div>
