--- a/reviews.html
+++ b/reviews.html
@@ -59,7 +59,7 @@
             <div class="row">
                 <div class="col-12 text-center s-background-color">
                     <div class="section-title s-background-color">
-                        <h1 class="display-4 fw-semibold s-background-color">Reviews</h1>
+                        <h1 class="display-4 fw-semibold s-background-color">What students say !</h1>
                         <div class="line"></div>
                         <!-- <p class="s-background-color">It's never been this fun to learn languages. Millions of happy FluentFlyer members agree!</p> -->
                     </div>
@@ -76,12 +76,12 @@
                                 <i class="ri-star-fill bg-white"></i>
                                 <i class="ri-star-fill bg-white star"></i>
                             </div>
-                            <p class="comment-block">I never imagined how much I'd be hooked on FluentFlyer. I post in Spanish and get edits/comments instantly from native speakers!</p>
+                            <p class="comment-block">استاذ حريص ومجتهد ، شكراً جزيلاً</p>
                         </div>
                         <div class="review-person mt-4 d-flex align-items-center s-background-color ">
                             <img class="rounded-circle" src="./assets/images/avatar-1.jpg" alt="avatar">
                             <div class="ms-3 s-background-color">
-                                <h5 class="s-background-color">Dianne Russell</h5>
+                                <h5 class="s-background-color">Mohammad saud</h5>
                             </div>
                         </div>
                     </div>
@@ -96,7 +96,7 @@
                                 <i class="ri-star-fill bg-white star"></i>
                                 <i class="ri-star-fill bg-white star"></i>
                             </div>
-                            <p class="comment-block">I'm surprised at how friendly people are and how they genuinely are interested in learning and meeting new friends.</p>
+                            <p class="comment-block">Samer is a fantastic teacher, the best I have ever had. He prepares the classes a lot and adapts the contents and activities to my needs and interests. He makes me enjoy the classes and the time flies with him.</p>
                         </div>
                         <div class="review-person mt-4 d-flex align-items-center s-background-color">
                             <img class="rounded-circle" src="./assets/images/avatar-2.jpg" alt="avatar">
@@ -116,7 +116,7 @@
                                 <i class="ri-star-fill bg-white"></i>
                                 <i class="ri-star-fill bg-white"></i>
                             </div>
-                            <p class="comment-block">I'm surprised at how friendly people are and how they genuinely are interested in learning and meeting new friends.</p>
+                            <p class="comment-block">Samer is a responsible teacher who always comes well prepared. I enjoy studying with him.</p>
                         </div>
                         <div class="review-person mt-4 d-flex align-items-center s-background-color">
                             <img class="rounded-circle" src="./assets/images/avatar-3.jpg" alt="avatar">
@@ -136,7 +136,7 @@
                                 <i class="ri-star-fill bg-white star"></i>
                                 <i class="ri-star-fill bg-white star"></i>
                             </div>
-                            <p class="comment-block">French native learning German on FluentFlyer: Feedback on French, suggestions for German. Community contribution.</p>
+                            <p class="comment-block">I really enjoy my lessons with Samer. He always prepares for his lessons and conducts them with soul, devoting himself to the process. I recommend</p>
                         </div>
                         <div class="review-person mt-4 d-flex align-items-center s-background-color">
                             <img class="rounded-circle" src="./assets/images/avatar-6.jpg" alt="avatar">
@@ -156,7 +156,7 @@
                                 <i class="ri-star-fill bg-white"></i>
                                 <i class="ri-star-fill bg-white"></i>
                             </div>
-                            <p class="comment-block">FluentFlyer blew me away! Practice German writing, get valuable suggestions. It's like having a personal language tutor.</p>
+                            <p class="comment-block">Samer is a vary good listener and he has a long term plan also he tailirs lessons to my specific needs when he notices there are areas that need to be targeted i highly recommend him </p>
                         </div>
                         <div class="review-person mt-4 d-flex align-items-center s-background-color">
                             <img class="rounded-circle" src="./assets/images/avatar-5.jpg" alt="avatar">
@@ -176,7 +176,7 @@
                                 <i class="ri-star-fill bg-white"></i>
                                 <i class="ri-star-fill bg-white"></i>
                             </div>
-                            <p class="comment-block">I've been using this app for a week now and I love it! I'm there to practice my Korean and people are very helpful in correcting me.</p>
+                            <p class="comment-block">Hi is a very nice and talented teacher i really learned a lot with him he is well prepared before lessons and he is making a hard follow up with you if he feels that you are lazy 😂 to encourage you to continue your improvement journey , and he likes what he do you will enjoy the lessons with him he is so funny and always excited to do his job </p>
                         </div>
                         <div class="review-person mt-4 d-flex align-items-center s-background-color">
                             <img class="rounded-circle" src="./assets/images/avatar-4.jpg" alt="avatar">
