--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="icon" type="image/x-icon" href="assets/images/contries.jpg">
+    <link rel="icon" href="assets/images/airplane.svg" type="image/x-icon">
 </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">
@@ -19,8 +19,10 @@
     <!-- NAVBARrr -->
     <nav class="navbar navbar-expand-lg sticky-top ">
         <div class="container ">
+            <!-- <img src="assets/images/logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top me-3"> -->
+            <i class="bi bi-airplane d-inline-block align-text-top me-3 logo"></i>
             <a class="navbar-brand" href="#">
-                <h3>Fluent<span>Flyer</span></h3>
+                <h3 class="m-0">Fluent<span>Flyer</span></h3>
             </a>
             <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,7 +40,7 @@
                         <a class="nav-link" href="#services">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#portfolio">Become a Partner</a>
+                        <a class="nav-link" href="#partner">Become a Partner</a>
                     </li>
                 </ul>
                 <a href="#" class="btn btn-brand ms-lg-3">Learners area</a>
