--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="icon" href="assets/images/airplane.svg" type="image/x-icon">
+    <link rel="icon" href="assets/images/logo.svg" type="image/x-icon">
 </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">
