header footer for sessions

--- a/reviews.html
+++ b/reviews.html
@@ -81,7 +81,7 @@
                         <div class="review-person mt-4 d-flex align-items-center s-background-color ">
                             <img class="rounded-circle" src="./assets/images/avatar-1.jpg" alt="avatar">
                             <div class="ms-3 s-background-color">
-                                <h5 class="s-background-color">Mohammad saud</h5>
+                                <h5 class="s-background-color">Mohamad saud</h5>
                             </div>
                         </div>
                     </div>
