--- a/registration.html
+++ b/registration.html
@@ -15,9 +15,9 @@
         <form action="#">
             <h1>create new account</h1>
             <div class="social-container">
-                <a href="#" class="social">,<i class="fa-brands
+                <a href="#" class="social"> <i class="fa-brands
                     fa-facebook-f"> </i></a>
-                <a href="#" class="social">,<i class="fa-brands
+                <a href="#" class="social"> <i class="fa-brands
                     fa-google-plus-g"> </i></a>
             </div>
             <span> or use your email for registration</span>
@@ -32,9 +32,9 @@
         <form action="#">
             <h1>Sign in</h1>
             <div class="social-container">
-                <a href="#" class="social">,<i class="fa-brands
+                <a href="#" class="social"> <i class="fa-brands
                     fa-facebook-f"> </i></a>
-                <a href="#" class="social">,<i class="fa-brands
+                <a href="#" class="social"> <i class="fa-brands
                     fa-google-plus-g"> </i></a>
             </div>
             <span> or use your account</span>
