EDITED THE HTML PHOTOS

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                       <div class="col-md-4">
                         <div class="card-box text-center">
                           <div class="user-pic">
-                            <img src="/assets/images/women.jpg" class="img-fluid" alt="User Pic">
+                            <img src="assets/images/women.jpg" class="img-fluid" alt="User Pic">
                           </div>
                           <div class="rating">
                             <i class="fas fa-star"></i>
@@ -198,7 +198,7 @@
                       <div class="col-md-4">
                         <div class="card-box text-center">
                           <div class="user-pic">
-                            <img src="/assets/images/Image.jpg" class="img-fluid" alt="User Pic">
+                            <img src="assets/images/Image.jpg" class="img-fluid" alt="User Pic">
                           </div>
                           <div class="rating">
                             <i class="fas fa-star"></i>
@@ -223,7 +223,7 @@
                       <div class="col-md-4">
                         <div class="card-box text-center">
                           <div class="user-pic">
-                            <img src="/assets/images/1445-08-09 06:36:14.jpg" class="img-fluid" alt="User Pic">
+                            <img src="assets/images/IMAGE 1445-08-09 06:36:14.jpg" class="img-fluid" alt="User Pic">
                           </div>
                           <div class="rating">
                             <i class="fas fa-star"></i>
@@ -249,7 +249,7 @@
                       <div class="col-md-4">
                         <div class="card-box text-center">
                           <div class="user-pic">
-                            <img src="/assets/images/avatar-1.jpg" class="img-fluid" alt="User Pic">
+                            <img src="assets/images/Image.jpg" class="img-fluid" alt="User Pic">
                           </div>
                           <div class="rating">
                             <i class="fas fa-star"></i>
@@ -273,7 +273,7 @@
                       <div class="col-md-4">
                         <div class="card-box text-center">
                           <div class="user-pic">
-                            <img src="/assets/images/avatar-2.jpg" class="img-fluid" alt="User Pic">
+                            <img src="assets/images/women.jpg" class="img-fluid" alt="User Pic">
                           </div>
                           <div class="rating">
                             <i class="fas fa-star"></i>
@@ -298,7 +298,7 @@
                       <div class="col-md-4">
                         <div class="card-box text-center">
                           <div class="user-pic">
-                            <img src="/assets/images/avatar-3.jpg" class="img-fluid" alt="User Pic">
+                            <img src="assets/images/Image.jpg" class="img-fluid" alt="User Pic">
                           </div>
                           <div class="rating">
                             <i class="fas fa-star"></i>
