--- a/newreq.html
+++ b/newreq.html
@@ -4,7 +4,7 @@
    <head>
       <meta charset="utf-8">
       <title>Multi Step Form | CodingNepal</title>
-      <link rel="stylesheet" href="index.css">
+      <link rel="stylesheet" href="newreq.css">
       <link rel="stylesheet" 
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
@@ -589,7 +589,7 @@
    });
  </script>
   
-<script src="script.js"></script>
+<script src="newreq.js"></script>
 
    </body>
 </html>
