LogIn instead of sign in

--- a/registration.html
+++ b/registration.html
@@ -30,7 +30,7 @@
 
     <div class="form-container sign-in-container">
         <form action="#">
-            <h1>Sign in</h1>
+            <h1>Log in</h1>
             <div class="social-container">
                 <a href="#" class="social"> <i class="fa-brands
                     fa-facebook-f"> </i></a>
@@ -41,7 +41,7 @@
             <input type="email" placeholder="Email" />
             <input type="password" placeholder="Password" />
             <a href="#"> Forget your password? </a>
-            <button> Sign in </button>
+            <button> Log in </button>
         </form>
     </div>
 
@@ -50,7 +50,7 @@
             <div class="overlay-panel overlay-left">
                 <h1> already a flier ?</h1>
                 <p>To keep flying with us please login</p>
-                <button class="ghost" id="signIn">Sign In</button>
+                <button class="ghost" id="signIn">Log In</button>
             </div>
             <div class="overlay-panel overlay-right">
             <h1>New flier ?</h1>
